# threadly

./: .env  .gitignore  Cargo.toml  diesel.toml
backend/: .env  Cargo.toml  diesel.toml  rustfmt.toml
backend/crates/libs/lib-ai/: Cargo.toml
backend/crates/libs/lib-ai/src/: client.rs  error.rs  models.rs
backend/crates/libs/lib-ai/src/google_auth/: error.rs
backend/crates/libs/lib-ai/src/token_manager/: error.rs
backend/crates/libs/lib-auth/: Cargo.toml
backend/crates/libs/lib-auth/src/auth/: dto.rs  mod.rs
backend/crates/libs/lib-auth/src/users/: dev_ops.rs
backend/crates/libs/lib-core/src/: client_error.rs
backend/crates/libs/lib-core/src/ctx/: mod.rs
backend/crates/libs/lib-core/src/model/: base.rs  schema_enums.rs
backend/crates/libs/lib-game-events/src/: manager.rs
backend/crates/libs/lib-game-events/src/event/: session.rs
backend/crates/libs/lib-game-logic/src/: engine.rs  error.rs  lib.rs  story_generation_task.rs
backend/crates/libs/lib-messages/: Cargo.toml
backend/crates/libs/lib-messages/src/: db_ops.rs  model.rs
backend/crates/libs/lib-players/: Cargo.toml
backend/crates/libs/lib-players/src/: db_ops.rs  lib.rs
backend/crates/libs/lib-rest/: Cargo.toml
backend/crates/libs/lib-rest/src/: error.rs  lib.rs
backend/crates/libs/lib-rest/src/dto_models/: requests.rs
backend/crates/libs/lib-sessions/src/: model.rs
backend/crates/libs/lib-stories/src/: db_ops.rs
backend/crates/libs/lib-utils/: Cargo.toml
backend/crates/libs/lib-utils/src/: envs.rs
backend/crates/libs/lib-websockets/: Cargo.toml
backend/crates/libs/lib-websockets/src/: game_events.rs  lib.rs  sessions_events.rs
backend/crates/services/game-server/src/: main.rs  mw_auth.rs
backend/crates/services/game-server/src/log/: mod.rs
backend/crates/tests/test-suite/: Cargo.toml
backend/crates/tests/test-suite/src/: lib.rs  test_play_flow.rs  test_sessions.rs
client/: .gitignore  settings.gradle.kts
client/composeApp/: build.gradle.kts
client/composeApp/src/androidMain/: AndroidManifest.xml
client/composeApp/src/androidMain/kotlin/com/skyflydev/threadly/: MainActivity.kt  ThreadlyApplication.kt
client/composeApp/src/androidMain/kotlin/com/skyflydev/threadly/di/: Modules.android.kt
client/composeApp/src/androidMain/res/values/: strings.xml
client/composeApp/src/commonMain/kotlin/com/skyflydev/threadly/: App.kt  SplashScreen.kt
client/composeApp/src/commonMain/kotlin/com/skyflydev/threadly/core/common/error/: AppError.kt  Error.kt  ErrorDto.kt
client/composeApp/src/commonMain/kotlin/com/skyflydev/threadly/core/common/result/: AppResult.kt
client/composeApp/src/commonMain/kotlin/com/skyflydev/threadly/core/designsystem/theme/: Colors.kt  ThreadlyTheme.kt
client/composeApp/src/commonMain/kotlin/com/skyflydev/threadly/core/model/: AuthData.kt  DomainGameEvent.kt  Player.kt  Session.kt
client/composeApp/src/commonMain/kotlin/com/skyflydev/threadly/core/network/: ApiConfig.kt  HttpClientExt.kt  HttpClientFactory.kt  JsonConfig.kt  UnauthorizedHandler.kt
client/composeApp/src/commonMain/kotlin/com/skyflydev/threadly/data/auth/dto/: AuthResponseDto.kt
client/composeApp/src/commonMain/kotlin/com/skyflydev/threadly/data/token/: AuthDataStore.kt  LocalAuthDataStore.kt
client/composeApp/src/commonMain/kotlin/com/skyflydev/threadly/di/: InitKoin.kt  Modules.kt
client/composeApp/src/commonMain/kotlin/com/skyflydev/threadly/feature/auth/: AuthScreen.kt
client/composeApp/src/commonMain/kotlin/com/skyflydev/threadly/feature/game/: GameScreen.kt
client/composeApp/src/commonMain/kotlin/com/skyflydev/threadly/feature/home/: HomeScreen.kt
client/composeApp/src/commonMain/kotlin/com/skyflydev/threadly/feature/session/: GameScreen.kt  ReadySessionScreen.kt
client/composeApp/src/commonMain/kotlin/com/skyflydev/threadly/navigation/: RootScreen.kt
client/composeApp/src/commonTest/kotlin/com/skyflydev/threadly/: ComposeAppCommonTest.kt
client/composeApp/src/iosMain/kotlin/com/skyflydev/threadly/: MainViewController.kt  Platform.ios.kt
client/composeApp/src/nativeMain/kotlin/com/skyflydev/threadly/di/: Modules.native.kt
client/composeApp/src/wasmJsMain/kotlin/com/skyflydev/threadly/: main.kt
client/composeApp/src/wasmJsMain/kotlin/com/skyflydev/threadly/di/: Modules.wasmJs.kt
client/composeApp/src/wasmJsMain/resources/: index.html
client/gradle/: libs.versions.toml
client/iosApp/Configuration/: Config.xcconfig
client/iosApp/iosApp.xcodeproj/: project.pbxproj
crates/libs/lib-ai/src/: lib.rs
crates/libs/lib-ai/src/google_auth/: mod.rs
crates/libs/lib-ai/src/token_manager/: mod.rs
crates/libs/lib-auth/src/: router.rs
crates/libs/lib-auth/src/auth/: dto.rs  error.rs  jwt.rs  service.rs
crates/libs/lib-auth/src/users/: dev_ops.rs  mod.rs  model.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: config.rs  lib.rs
crates/libs/lib-core/src/ctx/: error.rs  mod.rs
crates/libs/lib-core/src/dto/: session.rs
crates/libs/lib-core/src/model/: error.rs  message.rs  mod.rs  schema.rs  schema_enums.rs
crates/libs/lib-core/src/model/store/: error.rs  mod.rs
crates/libs/lib-game-events/: Cargo.toml
crates/libs/lib-game-events/src/: event.rs  manager.rs
crates/libs/lib-game-events/src/event/: game.rs
crates/libs/lib-game-logic/: Cargo.toml
crates/libs/lib-game-logic/src/: engine.rs  error.rs
crates/libs/lib-messages/src/: db_ops.rs
crates/libs/lib-players/src/: db_ops.rs  model.rs
crates/libs/lib-rest/src/: dto_models.rs  router.rs  session.rs
crates/libs/lib-rest/src/dto_models/: responses.rs
crates/libs/lib-sessions/: Cargo.toml
crates/libs/lib-sessions/src/: db_ops.rs  model.rs
crates/libs/lib-stories/: Cargo.toml
crates/libs/lib-stories/src/: model.rs
crates/libs/lib-websockets/src/: connection.rs  lib.rs  router.rs
crates/services/game-server/: Cargo.toml
crates/services/game-server/src/: app_state.rs  error.rs  main.rs  mw_auth.rs  mw_res_map.rs
crates/tests/test-suite/src/: test_players.rs
migrations/2025-07-25-124829_sessions_messages_players_tables/: down.sql  up.sql
(+48 files in other folders)
