[workspace.lints.rust]
unsafe_code = "forbid"
# unused = "allow" # For experimental dev.

[workspace]
resolver = "2"
members = [ "crates/libs/lib-auth",
    "crates/libs/lib-core", "crates/libs/lib-game-events",
    "crates/libs/lib-game-logic",
    "crates/libs/lib-messages",
    "crates/libs/lib-players",
    "crates/libs/lib-rest",
    "crates/libs/lib-sessions",
    "crates/libs/lib-utils",
    "crates/libs/lib-websockets",
    "crates/services/game-server",
    "crates/tests/test-suite",
    # -- Application Libraries
    # "crates/libs/lib-utils", # e.g., base64, time.
    # "crates/libs/lib-rpc", # e.g., rpc routing.
    # "crates/libs/lib-auth", # e.g., for pwd, token.
    # "crates/libs/lib-core", # e.g., model, ctx, config.

    # # -- Application Services
    # "crates/services/web-server",
    # "crates/services/grpc-server",
    # "crates/tools/performance-test",
    # "crates/tools/grpc-client",

    # # -- Tools
    # "crates/tools/gen-key",    
]
