[package]
name = "lib-core"
version = "0.1.0"
edition = "2024"

[dependencies]
lib-utils = { path = "../../libs/lib-utils" }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["time_0_3"] }
derive_more = { version = "2.0.1", features = ["from"] }
diesel = { version = "2.2.10", features = [
    "postgres",
    "chrono",
    "r2d2",
    "uuid",
] }
axum = { version = "0.8.4", features = ["ws"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
nanoid = "0.4.0"
diesel_migrations = "2.2.0"
thiserror = "2.0.14"

[dev-dependencies]
anyhow = "1"
serial_test = "3.2.0"

[lints]
workspace = true
