[package]
name = "lib-game-events"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
dashmap = "6.1.0"
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
