[package]
name = "lib-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
dashmap = "6.1.0"
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "gzip"] }
reqwest-streams = { version = "0.12.0", features = ["json", "csv", "arrow"] }
jsonwebtoken = "9.3.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.14"
futures-util = { version = "0.3", features = ["std"] }
tokio-util = "0.7.16"
tracing = "0.1"

[lints]
workspace = true
