[package]
name = "lib-rest"
version = "0.1.0"
edition = "2024"

[dependencies]
lib-core = { path = "../../libs/lib-core" }
lib-players = { path = "../../libs/lib-players" }
lib-sessions = { path = "../../libs/lib-sessions" }
lib-game-logic = { path = "../../libs/lib-game-logic" }

uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.4", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.14"
tracing = "0.1"
derive_more = "2.0.1"
serde_with = "3"
diesel = { version = "2.2.10", features = [
    "postgres",
    "chrono",
    "r2d2",
    "uuid",
] }

[lints]
workspace = true
