[package]
name = "test-suite"
version = "0.1.0"
edition = "2024"

[dependencies]
lib-core = { path = "../../libs/lib-core" }
lib-messages = { path = "../../libs/lib-messages" }
lib-sessions = { path = "../../libs/lib-sessions" }
lib-players = { path = "../../libs/lib-players" }
lib-game-logic = { path = "../../libs/lib-game-logic" }
lib-game-events = { path = "../../libs/lib-game-events" }

uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2.10", features = [
    "postgres",
    "chrono",
    "r2d2",
    "uuid",
] }

[dev-dependencies]
serial_test = "3.2.0"

[lints]
workspace = true
